bdr.BDR.scala.error
Compilation error:
BDR:1: error: not found: value fini
fini=false
^BDR:3: error: not found: value fini
while(!fini){
       ^BDR:5: error: not found: value R
  if (litMessage()==R){
                    ^BDR:8: error: not found: value L
} else if (litMessage==L){
                       ^BDR:11: error: not found: value I
}else if (litMessage==I){
                      ^BDR:14: error: not found: value A
}else if(litMessage==A){
                     ^BDR:16: error: not found: value B
}else if(litMessage==B){
                     ^BDR:19: error: not found: value C
}else if(litMessage==C){
                     ^BDR:23: error: not found: value Z
}else if(litMessage==Z){
                     ^BDR:26: error: not found: value Y
}else if(litMessage==Y){
                     ^BDR:30: error: not found: value X
}else if(litMessage==X){
                     ^BDR:36: error: not found: value fini
    fini=true
    ^